# Personal-GUI-Agent

./: .gitignore  .gitmodules  CHANGES.md  COMPLETE_PIPELINE_FINAL.md  EXECUTION_SUMMARY_CN.md  FIXES_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  PIPELINE_COMPLETE.md  QUICK_REFERENCE.md  QUICK_START_NEW_SESSIONS.md  README.md  README_en.md  REFACTORING_COMPLETE.md  SYSTEM_STATUS_REPORT.md  VLM_LLM_ANALYSIS_GUIDE.md  VLM_SCREENSHOT_BUG_FIX.md  autoglm_cli.py  config.json  demo_agent_v2.py  development_rules.md  knowledge_base.py  main.py  observer.py  plan.txt  pyproject.toml  refiner.py  reprocess_llm_result.py  reprocess_session.py  shared_config.py  test_complete_pipeline.py  test_optimized_prompt.py  test_voice_simple.py  verify_api_config.py
.claude/: settings.local.json
AutoGLM/: test.py
Open-AutoGLM/: __init__.py  main.py
backend/: API_DOCUMENTATION.md  QUICKSTART.md  SYSTEM_ENHANCEMENT_SUMMARY.md  graph_service.py  main.py  test_api.py
config/: permissions.json
data/: index.json  master_index.json  user_profile_init.json
examples/: executor_capability_demo.py  integrated_task_agent_demo.py  phone_task_executor.py  simple_task_agent.py  task_scheduler_demo.py
frontend/: index.html  package.json  vite.config.ts
learning_mode/: GUI_Agent_用户行为学习与分析系统.md  README.md  __init__.py  behavior_analyzer.py  config.json  demo_system.py  error_handling.py  unified_cli.py  utils.py
scripts/: COMPLETION_SUMMARY.md  QUICK_START.md  README.md  add_user_class_properties.py  migrate_sessions.py  reinit_graph_with_profile.py  test_graphrag_query.py  test_profile_write.py  test_session_organization.py  test_setup.py  test_setup_v2.py
simple_graphrag/: .gitignore  ARCHITECTURE_V2.md  BATCH_PROCESSING.md  DETAILED_OUTPUT_GUIDE.md  ENTITY_GRAPH_BINDING.md  IMPLEMENTATION_SUMMARY.md  MERGE_OPTIMIZATION.md  PROGRESS_TRACKING.md  PROMPT_OPTIMIZATION_THREE_PHASE.md  QUICKSTART_PROGRESS.md  QUICKSTART_V2.md  README.md  REFACTOR_CHANGELOG.md  REFACTOR_SUMMARY.md  REFER_FIELD_IMPLEMENTATION.md  SIMPLEGRAPH_README.md  THREE_PHASE_RELATIONSHIP_EXTRACTION.md  UPDATE_SUMMARY.md  USAGE.md  __init__.py  demo_merge_optimization.py  example.txt  example_entity_properties.py  example_simplegraph.py  example_system_builder.py  example_text_converter.py  export_structured_graph.py  graph_structured.md  graph_visualizer.py  main.py  pipeline.py  pipeline_v2.py  pyproject.toml  requirements.txt  simplegraph.py  test_batch_processing.py  test_entity_graph_binding.py  test_grouping.py  test_simplegraph.py  test_system_from_config.py  (+1 more)
src/: __init__.py
task_framework/: CAPABILITY_ENHANCEMENT.md  README.md  (+15 more)
(+161 files in other folders)
