[project]
name = "personalui"
version = "0.1.0"
description = "个性化GUI Agent系统 - 基于AutoGLM和GraphRAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "volcengine-python-sdk[ark]>=4.0.43",
    "Pillow>=12.0.0",
    "openai>=2.9.0",
    "opencv-python>=4.8.0",
    "numpy>=1.24.0",
    "networkx>=3.0",
]

[project.scripts]
personalui = "main:main"
autoglm = "autoglm_cli:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.workspace]
members = [
    "graphrag",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
