[project]
name = "personalui"
version = "0.1.0"
description = "个性化GUI Agent系统 - 基于AutoGLM和GraphRAG"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.13.2",
    "edge-tts>=7.2.7",
    "fastapi>=0.128.0",
    "numpy>=1.24.0",
    "pyaudio>=0.2.11",
    "pydantic>=2.12.5",
    "playsound@git+https://github.com/taconi/playsound",
    "pyvis>=0.3.2",
    "pyyaml>=6.0.3",
    "uvicorn>=0.40.0",
    "volcengine-python-sdk[ark]>=4.0.43",
    "webrtcvad>=2.0.10",
    "openai>=2.14.0",
    "openai-whisper>=20240930",
    "pip>=25.3",
    "setuptools>=80.9.0",
    "requests>=2.32.5",
]

[project.scripts]
graphrag_simple = "main:main"
autoglm = "autoglm_cli:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[tool.uv.workspace]
members = [
    "graphrag_simple",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*", "task_framework*"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
